# polymarket-football-bot

./: .gitignore  CLAUDE.md  Dockerfile  README.md  analyze.py  config.example.yaml  container-structure-test.yaml  dashboard-data.json  docker-compose.yml  engine.py  index.html  main.py  pyproject.toml  run.sh
.github/: deploy.sh
.github/workflows/: ci.yml  deploy.yml  pages.yml  release.yml  smoke-test.yml
dashboard/: Dockerfile  index.html  push.py
dashboard/tests/: dashboard.spec.js  playwright.config.js
src/: analyze.py  engine.py  main.py  stats.py
tests/: test_analyze.py  test_coverage.py  test_engine.py  test_main.py  test_orchestration.py  test_run_loop.py
